# rust-gateway

./: .envrc  Cargo.toml  docker-compose.yaml
kratos/: identity.schema.json  kratos.yml
src/: main.rs
src/application/: bootstrap.rs  mod.rs
src/application/graphql/mutations/: login_mutation.rs  mod.rs  register_mutation.rs
src/application/handlers/: auth.rs
src/application/usecases/auth/: auth.rs  jwt_service.rs  login.rs  login_usecase.rs  mod.rs  register.rs  register_usecase.rs
src/domain/: mod.rs
src/domain/auth/: inputs.rs  responses.rs
src/domain/entities/: user.rs
src/domain/repositories/: user_repository.rs
src/infrastructure/: mod.rs
src/infrastructure/adapters/: mod.rs
src/infrastructure/adapters/graphql/: handlers.rs  mod.rs  response_cookies.rs  schema.rs
src/infrastructure/adapters/graphql/mutations/: login_mutation.rs  register_mutation.rs
src/infrastructure/adapters/graphql/queries/: health_query.rs  mod.rs
src/infrastructure/adapters/http/: server.rs
src/infrastructure/adapters/kratos/: kratos_client.rs  mod.rs
src/infrastructure/persistence/: in_memory_user_repository.rs  mod.rs
