[package]
name = "rust-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
async-graphql = "7.0.17"
async-graphql-actix-web = "7.0.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = { version="0.1.0" }
async-graphql-actix-web = "7.0.17"
tracing-subscriber = "0.3"
tracing-actix-web = "0.7.19"
cqrs-es = { version = "0.4.12" }
postgres-es = { version="0.4.12" }
