[package]
name = "rust-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
async-graphql = "7.0.17"
async-graphql-actix-web = "7.0.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = { version="0.1.0" }
tracing-actix-web = "0.7.19"
cqrs-es = { version = "0.4.12" }
postgres-es = { version="0.4.12" }
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
actix-cors = "0.7"
dotenv = { version="0.15.0" } 
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.17"
